@@ -546,3 +546,5 @@ Issue #2279677: Fixed Notice 'Undefined property: $title in WorkflowScheduledTra
 Issue #2279967: Fixed Wrong default value for ScheduledTransition widget.
 Issue #2282969: Added help text on Workflows page, to tell user how to use Workflow Field.
 Issue #2285327: Fixed wrong function call in VBO action 'Set to next state'.
+Issue #2277751 by barami: Added $property['options list'] to Workflow Field.
+ 
